[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
transformers = "^4.30.0"
torch = "^2.2.2"